<resources>
    <string name="app_name">LugaLuga</string>
    <string name="input">Senha</string>
    <string name="inputEmail">Email</string>
    <string name="btnLogin">Login</string>
    <string name="textEsqueci">Esqueci a senha</string>
    <string name="tvNome">Nome do produto</string>
    <string name="tvQtd">Quantidade</string>
    <string name="tvPreco">R$ 00,00</string>
    <string name="tvDescr">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</string>
    <string name="aluga">Alugar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nomeUsu">Nome</string>
    <string name="nomeInput">Insira seu nome</string>
    <string name="cpf">CPF</string>
    <string name="niver">Data de Nascimento</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="logradouroInput">insira o logradouro</string>
    <string name="nro">N° </string>
    <string name="compl">Complemento</string>
    <string name="complInput">insira o complemento</string>
    <string name="bairro">Bairro</string>
    <string name="bairroInput">insira o bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="cidadeInput">insira a Cidade e UF</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>

    <string-array name="uf_cadastro">
        <item>UF</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="produto">Produtos</string>
    <string name="solicitacao">Solicitações</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="atendimento">Atendimento</string>
    <string name="sobreNos">Sobre Nós</string>
    <string name="faleConosco">Fale Conosco</string>
    <string name="consCep">Consultar</string>
    <string name="usuarioCad">Usuários Cadastrados</string>
</resources>