<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic_menu_ba"
            android:title="@string/produto"/>

        <item
            android:id="@+id/nav_solicitacao"
            android:icon="@drawable/ic_menu_solicitacoes"
            android:title="@string/solicitacao"/>

        <item
            android:id="@+id/nav_acompanhamento"
            android:icon="@drawable/ic_menu_acompanhamento"
            android:title="@string/acompanhamento"/>

        <item
            android:id="@+id/nav_atendimento"
            android:icon="@drawable/ic_menu_atendimento"
            android:title="@string/atendimento"/>

    </group>
    <item android:title="Mais informações">

        <menu>
            <item
                android:id="@+id/nav_sobreNos"
                android:icon="@drawable/ic_menu_sobrenos"
                android:title="@string/sobreNos"/>

            <item
                android:id="@+id/nav_FaleConosco"
                android:icon="@drawable/ic_menu_faleconosco"
                android:title="@string/faleConosco"/>
        </menu>
    </item>
</menu>