<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.CadastrarUsuarioActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="115dp"
        android:layout_height="99dp"
        android:src="@drawable/logoapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeUsu"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/nomeInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpf"
        android:textSize="60px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <EditText
        android:id="@+id/cpfInput"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:ems="11"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/cpf"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/niver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/niver"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpfInput" />

    <EditText
        android:id="@+id/DateNiver"
        android:layout_width="206dp"
        android:layout_height="28dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/niver"
        app:layout_constraintTop_toBottomOf="@+id/cpfInput" />

    <TextView
        android:id="@+id/cep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cep"
        android:textSize="60px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DateNiver" />

    <EditText
        android:id="@+id/cepInput"
        android:layout_width="213dp"
        android:layout_height="27dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/cep"
        app:layout_constraintTop_toBottomOf="@+id/DateNiver" />

    <TextView
        android:id="@+id/logradouro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logradouro"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cepInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/logradouroInput"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logradouro">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:hint="@string/logradouroInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nro"
        android:textSize="60px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logradouroInput" />

    <EditText
        android:id="@+id/nroInput"
        android:layout_width="211dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/nro"
        app:layout_constraintTop_toBottomOf="@+id/logradouroInput" />

    <TextView
        android:id="@+id/compl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compl"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nroInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compl">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/complInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/bairro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bairro"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bairroInput"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bairro">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:hint="@string/bairroInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bairroInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cidadeInput"
        android:layout_width="407dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidade">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidadeInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidadeInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="31dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/cidadeInput" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="292dp"
        android:layout_height="25dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textSize="50px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!-- Entendi o que voce quis fazer, mas era para usar o InputLayout. Olhar no site material.io -->