<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.ProdutoActivity"
    android:layout_margin="12dp">

    <TextView
        android:id="@+id/nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNome"
        android:textSize="70px"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQtd"
        android:textSize="70px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_card_24" />

    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPreco"
        android:textSize="60px"
        android:textStyle="bold"
        android:layout_marginTop="50px"
        android:layout_marginStart="30px"
        app:layout_constraintTop_toBottomOf="@+id/imagem"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluga"
        android:textSize="60px"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="25px"
        android:layout_marginEnd="20px"
        app:layout_constraintTop_toBottomOf="@+id/imagem"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDescr"
        android:layout_marginTop="30px"
        android:textSize="40px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />


</androidx.constraintlayout.widget.ConstraintLayout>