<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/nomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNome"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPreco"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/descProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDescr"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoProduto"
        />

</androidx.constraintlayout.widget.ConstraintLayout>